Titel und URL angepasst

--- a/00_main.tex
+++ b/00_main.tex
@@ -70,7 +70,7 @@
 %----------------------------------------------------------------------------------------
 % Titel Seite
 \createTikZTitlePage{\scriptFaculty}   
-{{\huge\textbf{Fach\\}}{\scriptTitle, Stand \today}}   
+{{\huge\textbf{\scriptTitle\\}}{Stand \today}}   
 {\scriptAuthor}
 
 %----------------------------------------------------------------------------------------
@@ -85,7 +85,7 @@
 
 \noindent {Published by \scriptPublisher} % Publisher
 
-\noindent {\scriptWebsite} % URL
+\noindent {\url{\scriptWebsite}} % URL
 
 \noindent
 Dieses Skript wird als Lehrmaterial für die Vorlesung \scriptCourse\ an der Hochschule Karlsruhe verwendet.
