Remove commas from bib-file, add csquotes to presentation

--- a/structure_presentation.tex
+++ b/structure_presentation.tex
@@ -45,6 +45,7 @@
 \usepackage{setspace}
 
 \usepackage[ngerman]{babel}
+\usepackage{csquotes}
 \usepackage[]{datetime}
 \newdateformat{usvardate}{%
 	\monthname[\THEMONTH] \THEYEAR}
