Add acronyms and glossary with examples for using the package

--- a/structure.tex
+++ b/structure.tex
@@ -67,6 +67,14 @@
 \makeindex % Tells LaTeX to create the files required for indexing
 
 %----------------------------------------------------------------------------------------
+% ACRONYMS AND GLOSSARY
+%----------------------------------------------------------------------------------------
+\usepackage[]{hyperref}
+\usepackage[acronym]{glossaries}
+\makeglossaries
+
+
+%----------------------------------------------------------------------------------------
 %	DIGITAL LOGIC & ELECTRONICS
 %----------------------------------------------------------------------------------------
 
