--- a/00_main.tex
+++ b/00_main.tex
@@ -49,6 +49,8 @@
 
 \date{\today}
 
+
+\input{acronyms.tex} % Insert acronyms.tex file which contains definitions and acronyms
 		
 %----------------------------------------------------------------------------------------
 %	Color Style (depending on Faculty)
@@ -337,6 +339,21 @@ Definition of word.
 
 Referencing Figure \ref{fig:placeholder} in-text automatically.
 
+
+%------------------------------------------------
+
+\section{Glossary and Acronyms}
+
+%Examples on using the glossaries package
+
+The \Gls{latexg} typesetting markup language is specially suitable 
+for documents that include \gls{mathsg}. 
+
+
+Given a set of numbers, there are elementary methods to compute 
+its \acrlong{gcd}, which is abbreviated \acrshort{gcd}. This 
+process is similar to that used for the \acrfull{lcm}.
+
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
@@ -346,6 +363,18 @@ Referencing Figure \ref{fig:placeholder} in-text automatically.
 \fancyhead[LE,LO]{\sffamily\normalsize\thepage} % Header - Odd-Even Page - Left side - show page numbers 
 \fancyhead[RE,RO]{\textbf \bibname} % Header - Odd-Even Page - Right side - show Bibliography text
 \printbibliography[heading=bibempty]
+
+%----------------------------------------------------------------------------------------
+%	GLOSSARY AND ACRONYMS / GLOSSAR UND ABKÜRZUNGSVERZEICHNIS
+%----------------------------------------------------------------------------------------
+
+\addcontentsline{toc}{chapter}{\textcolor{ThemeColor}{Abkürzungsverzeichnis}}
+%\printglossary[type=\acronymtype]
+\printglossary[type=\acronymtype,title={Abkürzungsverzeichnis}]
+
+
+\addcontentsline{toc}{chapter}{\textcolor{ThemeColor}{Glossar}} 
+\printglossary
 
 %----------------------------------------------------------------------------------------
 %	INDEX
