Translate chapter title 'bibliography' to german

--- a/00_main.tex
+++ b/00_main.tex
@@ -355,21 +355,19 @@ its \acrlong{gcd}, which is abbreviated \acrshort{gcd}. This
 process is similar to that used for the \acrfull{lcm}.
 
 %----------------------------------------------------------------------------------------
-%	BIBLIOGRAPHY
+%	BIBLIOGRAPHY - LITERATURVERZEICHNIS
 %----------------------------------------------------------------------------------------
 
-\chapter*{Bibliography}
-\addcontentsline{toc}{chapter}{\textcolor{ThemeColor}{Bibliography}} % Add a Bibliography heading to the table of contents
+\addcontentsline{toc}{chapter}{\textcolor{ThemeColor}{Literaturverzeichnis}} % Add a Bibliography heading to the table of contents
 \fancyhead[LE,LO]{\sffamily\normalsize\thepage} % Header - Odd-Even Page - Left side - show page numbers 
 \fancyhead[RE,RO]{\textbf \bibname} % Header - Odd-Even Page - Right side - show Bibliography text
-\printbibliography[heading=bibempty]
+\printbibliography[title=Literaturverzeichnis]
 
 %----------------------------------------------------------------------------------------
 %	GLOSSARY AND ACRONYMS / GLOSSAR UND ABKÜRZUNGSVERZEICHNIS
 %----------------------------------------------------------------------------------------
 
 \addcontentsline{toc}{chapter}{\textcolor{ThemeColor}{Abkürzungsverzeichnis}}
-%\printglossary[type=\acronymtype]
 \printglossary[type=\acronymtype,title={Abkürzungsverzeichnis}]
 
 
