--- a/structure.tex
+++ b/structure.tex
@@ -73,7 +73,6 @@
 \usepackage[acronym]{glossaries}
 \makeglossaries
 
-
 %----------------------------------------------------------------------------------------
 %	DIGITAL LOGIC & ELECTRONICS
 %----------------------------------------------------------------------------------------
@@ -560,6 +559,14 @@ innerbottommargin=5pt]{cBox}
     \fi
  }
 \makeatother
+
+%----------------------------------------------------------------------------------------
+%	PDF-Version and Compression
+%----------------------------------------------------------------------------------------
+
+\pdfminorversion=7
+\pdfobjcompresslevel=3
+\pdfcompresslevel=9
 
 %----------------------------------------------------------------------------------------
 %	LINKS
