synchronize used packages between script and presentation

--- a/structure.tex
+++ b/structure.tex
@@ -74,10 +74,11 @@
 \makeglossaries
 
 %----------------------------------------------------------------------------------------
-%	DIGITAL LOGIC & ELECTRONICS
+%	DIGITAL LOGIC & ELECTRONICS & PHYSICAL UNITS
 %----------------------------------------------------------------------------------------
 
 \usepackage[european, RPvoltages]{circuitikz}
+\usepackage{siunitx}
 
 %----------------------------------------------------------------------------------------
 %	MAIN TABLE OF CONTENTS
