--- a/structure_presentation.tex
+++ b/structure_presentation.tex
@@ -37,6 +37,13 @@
 \usepackage{ragged2e}
 
 \usepackage{calc}
+
+\usepackage{longtable}
+
+%----------------------------------------------------------------------------------------
+%	DIGITAL LOGIC & ELECTRONICS & PHYSICAL UNITS
+%----------------------------------------------------------------------------------------
+\usepackage[european, RPvoltages]{circuitikz}
 \usepackage{xparse,siunitx}
 
 \usepackage{color, colortbl}
