rename structure for dokument

--- a/dokument.tex
+++ b/dokument.tex
@@ -35,7 +35,7 @@
 
 \documentclass[11pt,fleqn]{book} % Default font size and left-justified equations
 
-\input{structure.tex} % Insert the structure.tex file which contains the majority of the structure behind the template
+\input{structure_dokument.tex} % Insert the structure.tex file which contains the majority of the structure behind the template
 
 \input{customcommands.tex} % Insert the customcommands.tex file which contains the custom made commands, functions, etc.
 
